--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
     <!-- advise section  -->
     <div class="position-relative py-md-5" id="advise">
         <div class="custom_container container mx-auto">
-            <h2 class="advise fs_5xl text-black fw-bold mx-auto" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="200"><span
-                    class="color_bittersweet"><span class="d-block">
+            <h2 class="advise fs_5xl text-black fw-bold mx-auto" data-aos="fade-up" data-aos-duration="1000"
+                data-aos-offset="200"><span class="color_bittersweet"><span class="d-block">
                         We advise
                     </span>
                     clients</span> in New York
@@ -291,33 +291,86 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
     </div>
     <!-- News Section  -->
     <div class="mt-md-0 mt-5">
-        <div class="container mx-auto position-relative overflow-hidden" data-aos="fade-up" data-aos-duration="1000">
-            <h2 class="fw-bold ms-sm-5 ps-sm-5 ps-3 text-space fs_8xl text-space">
-                News
+        <div class="position-relative overflow-hidden ms-sm-5 ps-md-5 ps-3 px-sm-0" data-aos="fade-up"
+            data-aos-duration="1000">
+            <h2 class="fw_800 text-space fs_8xl text-space text-uppercase letter_0-5 pt-4">
+                NEWS
             </h2>
-            <p class="text-black ms-sm-5 ps-sm-5 ps-3 mb-0 pb-3 pt-2 text-space">
+            <p class="text-black mb-0 pb-3 pt-2 text-space fw-semibold">
                 Developments, trends, and opinions that move us at Boddoohi &
                 Friedlander LLP, but also beyond.
             </p>
-            <div class="slider-arrow">
-                <a href="#" class="slick-prev">
+            <div class="slider-arrow d-none d-md-flex position-absolute">
+                <button class="slick-prev border-0 bg-transparent">
                     <svg width="72" height="54" viewBox="0 0 72 54" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path class="hover_svg" d="M19.3706 25.5H61.4999V28.5H19.3706V33L10.4999 27L19.3706 21V25.5Z"
                             fill="#FE6A5B"></path>
                     </svg>
-                </a>
-                <div class="slick-next transition_03">
-                    <a href="#">
-                        <svg width="72" height="54" viewBox="0 0 72 54" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path class="hover_svg"
-                                d="M52.6294 25.5H10.5001V28.5H52.6294V33L61.5001 27L52.6294 21V25.5Z" fill="#FE6A5B">
-                            </path>
-                        </svg>
-                    </a>
-                </div>
+                </button>
+                <button class="border-0 slick-next transition_03 bg-transparent">
+                    <svg width="72" height="54" viewBox="0 0 72 54" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path class="hover_svg" d="M52.6294 25.5H10.5001V28.5H52.6294V33L61.5001 27L52.6294 21V25.5Z"
+                            fill="#FE6A5B"></path>
+                    </svg>
+                </button>
             </div>
-            <div class="slider my-5 ms-sm-5 ps-sm-5 ps-3">
-                <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
+            <div class="news_slider my-5">
+                <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link"
+                    target="_blank"
+                    class="slide-card p-sm-4 p-3 d-flex flex-column justify-content-between d-inline-block">
+                    <h3 class="fs_xl fw-bold text-space text-black mb-0">
+                        Another big win in Kings County, Supreme Court
+                    </h3>
+                    <p class="fs_sm text-normal text-black mb-0">
+                        We obtained outright dismissal of a claim brought involving two
+                        separate real estate transactions, and claims under the New York
+                        Debtor and Creditor Law (i.e., plaintiff claimed the two sales were
+                        fraudulent conveyances designed to avoid the payment of a judgment).
+                        The Commercial Division in Brooklyn agreed with us, and our
+                        fantastic innocent-by-stander client, and dismissed the case
+                        outright (and denied the plaintiff leave to amend), ruling
+                        (correctly) that there was absolutely nothing wrong with the
+                        transfers, in a well-reasoned, and interesting decision. (access it
+                        <span class="color_bittersweet">here</span>)
+                    </p>
+                </a>
+                <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link"
+                    target="_blank"
+                    class="slide-card p-sm-4 p-3 d-flex flex-column justify-content-between d-inline-block">
+                    <h3 class="fs_xl fw-bold text-space text-black mb-0">
+                        Big win in the SDNY
+                    </h3>
+                    <p class="fs_sm text-normal text-black mb-0">
+                        We obtained a massive win in Federal Court, in the Southern District
+                        of New York, on behalf of our wonderful client, an international
+                        travel company. In this internet unfair
+                        competition/non-disparagement action, we obtained outright dismissal
+                        of the complaint in a decision issued by the Hon. Valerie E.
+                        Caproni. The decision was also written up in the New York Law
+                        Journal (access it<span class="color_bittersweet">here</span>)
+                    </p>
+                </a>
+                <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link"
+                    target="_blank"
+                    class="slide-card p-sm-4 p-3 d-flex flex-column justify-content-between d-inline-block">
+                    <h3 class="fs_xl fw-bold text-space text-black mb-0">
+                        Huge victory in the Appellate Division, First Department
+                    </h3>
+                    <p class="fs_sm text-normal text-black mb-0">
+                        This was a big victory our client, a wonderful New York cooperative
+                        corporation located in Queens, New York. On appeal, a panel of
+                        judges in Manhattan agreed with us and reversed the decision of the
+                        trial court to dismiss our client’s case, leading to the case being
+                        reinstated, and paving the way for a favorable resolution. In other
+                        words, a complete 360. The case involved a little known and often
+                        overlooked federal statute known as the Cooperative and Condominium
+                        Abuse Relief Act, that serves as a powerful tool for cooperatives
+                        and condominiums.
+                    </p>
+                </a>
+                <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link"
+                    target="_blank"
+                    class="slide-card p-sm-4 p-3 d-flex flex-column justify-content-between d-inline-block">
                     <h3 class="fs_xl fw-bold text-space text-black mb-0">
                         Another big win in the SDNY
                     </h3>
@@ -329,51 +382,104 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
                         August 2022, but the plaintiff was allowed to amend some of its
                         claims. This time, Judge Valerie Caproni granted our motion and
                         dismissed the amended complaint, with prejudice, and later awarded
-                        us costs and attorneys’ fees. York and California law. We obtained
-                        dismissal of the case once in August 2022, but the plaintiff was
-                        allowed to amend some of its claims. This time, Judge Valerie
-                        Caproni granted our motion and dismissed the amended complaint, with
-                        prejudice, and later awarded us costs and attorneys’ fees.
+                        us costs and attorneys’ fees.
                     </p>
-                </div>
-                <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
-                    <h3 class="fs_xl fw_bold text-space text-black mb-0">
+                </a>
+                <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link"
+                    target="_blank"
+                    class="slide-card p-sm-4 p-3 d-flex flex-column justify-content-between d-inline-block">
+                    <h3 class="fs_xl fw-bold text-space text-black mb-0">
                         Esopus Updates Proposed Marina Camping Rules
                     </h3>
                     <p class="fs_sm text-normal text-black mb-0">
-                        On December 22, 2021, the New York State Legislature passed (and
-                        Governing Hochul signed into law) a law exempting cooperatives from
-                        several provisions of the HSTPA
+                        Milad Boddoohi Quoted in the Daily Freeman Concerning The Town of
+                        Esopus’ Passage of Zoning Regulations Governing Marinas.
                     </p>
-                </div>
-                <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
-                    <h3 class="fs_xl fw_bold text-space text-black mb-0">
+                </a>
+                <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link"
+                    target="_blank"
+                    class="slide-card p-sm-4 p-3 d-flex flex-column justify-content-between d-inline-block">
+                    <h3 class="fs_xl fw-bold text-space text-black mb-0">
                         Esopus Seeks to Revise Zoning for Marina RV Lodging
                     </h3>
                     <p class="fs_sm text-normal text-black mb-0">
                         Milad Boddoohi quoted in the Daily Freeman concerning Town of Esopus
                         vs. Castaways Marina
                     </p>
-                </div>
-                <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
-                    <h3 class="fs_xl fw_bold text-space text-black mb-0">
-                        Another big win in the SDNY
+                </a>
+                <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link"
+                    target="_blank"
+                    class="slide-card p-sm-4 p-3 d-flex flex-column justify-content-between d-inline-block">
+                    <h3 class="fs_xl fw-bold text-space text-black mb-0">
+                        Esopus Town Board Schedules Public Hearing On Proposed Law Allowing
+                        Camping At Marinas Along Rondout Creek
+                    </h3>
+                    <p class="fs_sm text-normal text-black mb-0">
+                        Milad Boddoohi quoted in the Daily Freeman concerning proposed law
+                        revising Town of Esopus’ zoning regulations.
+                    </p>
+                </a>
+                <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link"
+                    target="_blank"
+                    class="slide-card p-sm-4 p-3 d-flex flex-column justify-content-between d-inline-block">
+                    <h3 class="fs_xl fw-bold text-space text-black mb-0">
+                        Boddoohi & Friedlander: New Law Alert:
                     </h3>
                     <p class="fs_sm text-normal text-black mb-0">
                         On December 22, 2021, the New York State Legislature passed (and
                         Governing Hochul signed into law) a law exempting cooperatives from
                         several provisions of the HSTPA
                     </p>
-                </div>
-                <div class="slide-card p-sm-4 p-3 d-flex justify-content-between">
-                    <h3 class="fs_xl fw_bold text-space text-black mb-0">
-                        Esopus Seeks to Revise Zoning for Marina RV Lodging
+                </a>
+                <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link"
+                    target="_blank"
+                    class="slide-card p-sm-4 p-3 d-flex flex-column justify-content-between d-inline-block">
+                    <h3 class="fs_xl fw-bold text-space text-black mb-0">
+                        Milad Boddoohi in the New York Law Journal: Googling Your Way To
+                        Victory
                     </h3>
                     <p class="fs_sm text-normal text-black mb-0">
-                        Milad Boddoohi quoted in the Daily Freeman concerning Town of Esopus
-                        vs. Castaways Marina
+                        A closer look at an underutilized tool rooted in the CPLR
                     </p>
-                </div>
+                </a>
+                <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link"
+                    target="_blank"
+                    class="slide-card p-sm-4 p-3 d-flex flex-column justify-content-between d-inline-block">
+                    <h3 class="fs_xl fw-bold text-space text-black mb-0">
+                        Milad Boddoohi in the Mann Report concerning the Condominium and
+                        Cooperative Protection and Abuse Relief Act.
+                    </h3>
+                    <p class="fs_sm text-normal text-black mb-0">
+                        Many cooperatives and condominiums have, for decades, overlooked
+                        potent statutory rights, enabling them to recapture building
+                        amenities currently under long-term, unfavorable leases with their
+                        developers.
+                    </p>
+                </a>
+                <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link"
+                    target="_blank"
+                    class="slide-card p-sm-4 p-3 d-flex flex-column justify-content-between d-inline-block">
+                    <h3 class="fs_xl fw-bold text-space text-black mb-0">
+                        Milad Boddoohi in the New York Law Journal: Not Out of Time, Not Out
+                        of Luck
+                    </h3>
+                    <p class="fs_sm text-normal text-black mb-0">
+                        An unsettled aspect of the Condominium and Cooperative Protection
+                        and Abuse Act may offer new hope.
+                    </p>
+                </a>
+                <a href="https://drive.google.com/file/d/1oiBY76-yaqE0XQHiUf0sBW9h_fTX-hBJ/view?usp=drive_link"
+                    target="_blank"
+                    class="slide-card p-sm-4 p-3 d-flex flex-column justify-content-between d-inline-block">
+                    <h3 class="fs_xl fw-bold text-space text-black mb-0">
+                        Milad Boddoohi in the New York Law Journal: When a Sex Offender
+                        Moves In
+                    </h3>
+                    <p class="fs_sm text-normal text-black mb-0">
+                        What, if anything, is the obligation of a board of a condominium or
+                        cooperative when a convicted sex offender moves in?
+                    </p>
+                </a>
             </div>
         </div>
     </div>
@@ -748,7 +854,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
     <script src="
         https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js
         "></script>
-    <script src="/assests/js/style.js"></script>
+    <script src="/assests/js/app.js"></script>
     <!-- AOS  -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
