--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
     <meta name="title" content="BF Firm Law" />
     <meta name="description" content="REAL ESTATE. BUSINESS. CONSTRUCTION." />
     <!-- ========================== LINK FAVICON ======================== -->
-    <link rel="shortcut icon" href="/assests/android-chrome-192x192.png" type="image/x-icon">
-    <link rel="icon" type="image/x-icon" href="/assests/favicon-16x16.png" />
-    <link rel="icon" href="/assests/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="192x192" href="/assests/android-chrome-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/assests/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/assests/favicon-16x16.png" />
-    <link rel="apple-touch-icon" sizes="256x256" href="/assests/android-chrome-256x256.png" />
+    <link rel="shortcut icon" href="/assets/android-chrome-192x192.png" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon-16x16.png" />
+    <link rel="icon" href="/assets/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/assets/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="256x256" href="/assets/android-chrome-256x256.png" />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content=" https://bf-law-firm.vercel.app" />
     <meta property="og:title" content="BF Firm Law" />
     <meta property="og:description" content="REAL ESTATE. BUSINESS. CONSTRUCTION." />
-    <meta property="og:image" content=" https://bf-law-firm.vercel.app/se_img.webp" />
+    <meta property="og:image" content=" https://bf-law-firm.vercel.app/assets/seo_img.webp" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content=" https://bf-law-firm.vercel.app" />
     <meta property="twitter:title" content="BF Firm Law" />
     <meta property="twitter:description" content="REAL ESTATE. BUSINESS. CONSTRUCTION." />
-    <meta property="twitter:image" content=" https://bf-law-firm.vercel.app/se_img.webp" />
+    <meta property="twitter:image" content=" https://bf-law-firm.vercel.app/assets/seo_img.webp" />
 
     <!-- Bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -38,10 +38,10 @@
 https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
 " rel="stylesheet" />
     <!-- custum css links  -->
-    <link rel="stylesheet" href="./assests/scss/milad.css">
-    <link rel="stylesheet" href="./assests/scss/root.css">
-    <link rel="stylesheet" href="./assests/scss/style.css">
-    <link rel="stylesheet" href="/assests/scss/slider.css" />
+    <link rel="stylesheet" href="./assets/scss/milad.css">
+    <link rel="stylesheet" href="./assets/scss/root.css">
+    <link rel="stylesheet" href="./assets/scss/style.css">
+    <link rel="stylesheet" href="/assets/scss/slider.css" />
     <!-- AOS  -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -54,9 +54,9 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
             <div class="side_nav ps-lg-5 pe-lg-0 px-md-4 md:py-5 py-3 flex-md-column flex-row d-flex">
                 <div class="d-md-none menu_icon d-flex pe-3">
                     <img onclick="showNav()" class="mobile-nav-icon cursor_pointer" id="navToggleIcon"
-                        src="/assests/images/icons/nav-toggle.svg" alt="toggle" />
+                        src="/assets/images/icons/nav-toggle.svg" alt="toggle" />
                 </div>
-                <a href="#"><img class="" src="/assests/images/icons/logo.svg" alt="logo"></a>
+                <a href="#"><img class="" src="/assets/images/icons/logo.svg" alt="logo"></a>
                 <ul id="navBar" class="d-flex mt-5 md:ms-2 flex-column ps-0 navbar_links ">
                     <li>
                         <a class="" href="#">Home</a>
@@ -85,12 +85,12 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
                     </h2>
                 </div>
                 <a class="scroll_down position-absolute" href="#advise"><img class="w-100"
-                        src="/assests/images/header/scroll-down.svg" alt="scroll_down"></a>
+                        src="/assets/images/header/scroll-down.svg" alt="scroll_down"></a>
             </div>
         </div>
-        <img class="parthners position-absolute end-0 bottom-0" src="/assests/images/header/characters-home.png"
+        <img class="parthners position-absolute end-0 bottom-0" src="/assets/images/header/characters-home.png"
             alt="partners">
-        <img class="bf_bg_logo position-absolute end-0 bottom-0" src="/assests/images/header/header-bg.svg"
+        <img class="bf_bg_logo position-absolute end-0 bottom-0" src="/assets/images/header/header-bg.svg"
             alt="bf-logo">
     </main>
     <!-- advise section  -->
@@ -112,7 +112,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
         <div
             class="real_estate mx-auto row px-lg-0 pe-sm-3 bg-white align-items-center align-items-md-end flex-wrap-reverse justify-content-center">
             <div class="col-sm-6 px-sm-0 h-100 estate_building" data-aos="fade-down" data-aos-duration="1000">
-                <img class="w-100 object-fit-contain h-100" src="/assests/images/real-estate/deal-bg.svg"
+                <img class="w-100 object-fit-contain h-100" src="/assets/images/real-estate/deal-bg.svg"
                     alt="real-estate">
             </div>
             <div class="col-sm-6 col-12 pt-4 pb-4 px-md-3 px-sm-0 px-3" data-aos="fade-up" data-aos-duration="1000">
@@ -194,7 +194,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
             </div>
             <div class="col-lg-5 col-sm-6 px-sm-0 h-100 dollor" data-aos="fade-down" data-aos-duration="1000">
                 <img class="w-100 object-fit-contain h-100"
-                    src="/assests/images/business-and-corporate/business-and-corporate.svg" alt="real-estate">
+                    src="/assets/images/business-and-corporate/business-and-corporate.svg" alt="real-estate">
             </div>
         </div>
     </div>
@@ -203,7 +203,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
         <div
             class="construction mx-auto pt-md-4 pt-0 row px-lg-0 pe-sm-3 bg-white flex-wrap-reverse justify-content-center">
             <div class="col-sm-6 px-sm-0 h-100 construction_crane" data-aos="fade-down" data-aos-duration="1000">
-                <img class="w-100 object-fit-contain h-100" src="/assests/images/construction/construction-bg.png"
+                <img class="w-100 object-fit-contain h-100" src="/assets/images/construction/construction-bg.png"
                     alt="real-estate">
             </div>
             <div class="col-sm-6 col-12 pt-4 pb-4 px-md-3 px-sm-0 px-3" data-aos="fade-up" data-aos-duration="1000">
@@ -284,7 +284,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
             </div>
             <div class="col-md-5 col-sm-3" data-aos="fade-down" data-aos-duration="1000">
                 <div class="litigation_section_img">
-                    <img src="./assests/images/litigation/hammer.png" alt="hammer image" class="hammer_img">
+                    <img src="./assets/images/litigation/hammer.png" alt="hammer image" class="hammer_img">
                 </div>
             </div>
         </div>
@@ -489,7 +489,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
             <div class="d-flex flex-lg-row flex-column">
                 <div data-aos="fade-down" data-aos-duration="1000" data-aos-offset="-1700">
                     <div class="milad_parent_margin me-auto">
-                        <img src="./assests/images/icons/inverted_coma.svg" alt="inverted comma" class="inverted_comma">
+                        <img src="./assets/images/icons/inverted_coma.svg" alt="inverted comma" class="inverted_comma">
                         <p
                             class="milad_para pt-5 mt-sm-5 mt-lg-0 mt-xl-5 text-white fs_2xl fw-bold m-0 letter_0-3 lh_100">
                             Milad is an
@@ -568,7 +568,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
                 </div>
                 <div data-aos="fade-down" data-aos-duration="1000" data-aos-offset="-1700">
                     <div class="ms-auto">
-                        <img src="./assests/images/milad/founder_man.png" alt="founder man image"
+                        <img src="./assets/images/milad/founder_man.png" alt="founder man image"
                             class="founder_man_img">
                     </div>
                 </div>
@@ -579,7 +579,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
     <div class="d-flex flex-lg-row flex-column-reverse max_w_1440">
         <div class="ms-sm-5 ps-sm-5 d-flex justify-content-end justify-content-lg-start" data-aos="fade-up"
             data-aos-duration="1000" data-aos-offset="-1700">
-            <img src="./assests/images/milad/founder_women.png" alt="founder women image" class="founder_women_img">
+            <img src="./assets/images/milad/founder_women.png" alt="founder women image" class="founder_women_img">
         </div>
         <div class="Cheryl_main_parent mt-sm-5 pt-5 pe-xl-0 pe-4" data-aos="fade-up" data-aos-duration="1000"
             data-aos-offset="-1700">
@@ -739,14 +739,14 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
         <div class="row position-relative max_w_1440" data-aos="fade-down" data-aos-duration="1000"
             data-aos-offset="-1700">
             <div class="image_col p-sm-0 ">
-                <img src="./assests/images/icons/footer-img.svg" alt="footer image"
+                <img src="./assets/images/icons/footer-img.svg" alt="footer image"
                     class="d-sm-block d-none pointer_event_none">
             </div>
             <div class="footer_link_col mt-sm-5 pb-sm-0 pb-5 padding_xl_footer_col">
                 <div class="mt-sm-5 pt-sm-5">
                     <div class="d-flex justify-content-center justify-content-md-start">
                         <div>
-                            <a href="#"><img class="footer_logo" src="./assests/images/icons/logo.svg" alt="logo" /></a>
+                            <a href="#"><img class="footer_logo" src="./assets/images/icons/logo.svg" alt="logo" /></a>
                             <div class="social_icons_margin d-flex d-md-none justify-content-center mt-md-0 mt-4">
                                 <a class="pe-3" href="https://www.facebook.com/thebflawfirm" target="_blank"
                                     rel="noopener noreferrer">
@@ -846,15 +846,15 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
             document.getElementById("navBar").classList.toggle("showNav");
             document.body.classList.toggle("nav_mobile_scroll");
             document.getElementById("navToggleIcon").src = navBar.classList.contains("showNav")
-                ? "/assests/images/icons/Cross.svg"
-                : "/assests/images/icons/nav-toggle.svg";
+                ? "/assets/images/icons/Cross.svg"
+                : "/assets/images/icons/nav-toggle.svg";
         }</script>
     <!-- slider script link  -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="
         https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js
         "></script>
-    <script src="/assests/js/app.js"></script>
+    <script src="/assets/js/app.js"></script>
     <!-- AOS  -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
