--- a/milad.html
+++ b/milad.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assests/scss/root.css">
-    <link rel="stylesheet" href="./assests/scss/milad.css">
+    <link rel="stylesheet" href="./assets/scss/root.css">
+    <link rel="stylesheet" href="./assets/scss/milad.css">
     <!-- bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -58,7 +58,7 @@
             </div>
             <div class="col-md-5 col-sm-3">
                 <div class="litigation_section_img">
-                    <img src="./assests/images/litigation/hammer.png" alt="hammer image" class="hammer_img">
+                    <img src="./assets/images/litigation/hammer.png" alt="hammer image" class="hammer_img">
                 </div>
             </div>
         </div>
@@ -68,7 +68,7 @@
         <div class="milad_section mx-auto max_w_1440">
             <div class="d-flex flex-lg-row flex-column">
                 <div class="milad_parent_margin me-auto">
-                    <img src="./assests/images/icons/inverted_coma.svg" alt="inverted comma" class="inverted_comma">
+                    <img src="./assets/images/icons/inverted_coma.svg" alt="inverted comma" class="inverted_comma">
                     <p class="milad_para pt-5 mt-sm-5 mt-lg-0 mt-xl-5 text-white fs_2xl fw-bold m-0 letter_0-3 lh_100">
                         Milad is an
                         experienced litigator and problem solver who has
@@ -142,7 +142,7 @@
                     </div>
                 </div>
                 <div class="ms-auto">
-                    <img src="./assests/images/milad/founder_man.png" alt="founder man image" class="founder_man_img">
+                    <img src="./assets/images/milad/founder_man.png" alt="founder man image" class="founder_man_img">
                 </div>
             </div>
         </div>
@@ -150,7 +150,7 @@
     <!-- Cheryl Friedlander SECTION -->
     <div class="d-flex flex-lg-row flex-column-reverse max_w_1440">
         <div class="ms-sm-5 ps-sm-5 d-flex justify-content-end justify-content-lg-start">
-            <img src="./assests/images/milad/founder_women.png" alt="founder women image" class="founder_women_img">
+            <img src="./assets/images/milad/founder_women.png" alt="founder women image" class="founder_women_img">
         </div>
         <div class="Cheryl_main_parent mt-sm-5 pt-5 pe-xl-0 pe-4">
             <h3 class="Cheryl_para text-black letter_0-3 lh_100 fw-bold fs_2xl mb-2">
@@ -267,7 +267,7 @@
                             (347) 252 9922
                         </p>
                     </a>
-                    <a href="mailto:hello@thebflawfirm.com" >
+                    <a href="mailto:hello@thebflawfirm.com">
                         <p class="text-white fw-normal lh_160 fs_sm mb-0 anything_link_text_hover transition_03">
                             hello@thebflawfirm.com
                         </p>
@@ -305,16 +305,17 @@
     <footer class="bg-black">
         <div class="row position-relative max_w_1440">
             <div class="image_col p-sm-0 ">
-                <img src="./assests/images/icons/footer-img.svg" alt="footer image"
+                <img src="./assets/images/icons/footer-img.svg" alt="footer image"
                     class="d-sm-block d-none pointer_event_none">
             </div>
             <div class="footer_link_col mt-sm-5 pb-sm-0 pb-5 padding_xl_footer_col">
                 <div class="mt-sm-5 pt-sm-5">
                     <div class="d-flex justify-content-center justify-content-md-start">
                         <div>
-                            <a href="#"><img class="footer_logo" src="./assests/images/icons/logo.svg" alt="logo" /></a>
+                            <a href="#"><img class="footer_logo" src="./assets/images/icons/logo.svg" alt="logo" /></a>
                             <div class="social_icons_margin d-flex d-md-none justify-content-center mt-md-0 mt-4">
-                                <a class="pe-3" href="https://www.facebook.com/thebflawfirm" target="_blank" rel="noopener noreferrer">
+                                <a class="pe-3" href="https://www.facebook.com/thebflawfirm" target="_blank"
+                                    rel="noopener noreferrer">
                                     <svg class="" width="24" height="24" viewBox="0 0 24 24" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
@@ -323,7 +324,8 @@
                                     </svg>
                                 </a>
 
-                                <a href="https://www.instagram.com/thebflawfirm/" target="_blank" rel="noopener noreferrer">
+                                <a href="https://www.instagram.com/thebflawfirm/" target="_blank"
+                                    rel="noopener noreferrer">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path class="transition_03s"
@@ -344,15 +346,21 @@
                     <div class="d-flex mt-2 item-center justify-content-center justify-content-md-start">
                         <div
                             class="d-flex flex-sm-row flex-column justify-content-center justify-content-sm-start align-items-center gap-sm-0 gap-2">
-                            <a class=" fs_sm fw-semibold text-white footer_links_hover transition_03" href="#">Back to Top</a>
-                            <a href="#" class="ms-sm-5  fs_sm fw-semibold text-white footer_links_hover transition_03">Practice
+                            <a class=" fs_sm fw-semibold text-white footer_links_hover transition_03" href="#">Back to
+                                Top</a>
+                            <a href="#"
+                                class="ms-sm-5  fs_sm fw-semibold text-white footer_links_hover transition_03">Practice
                                 Areas</a>
-                            <a href="#" class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">News</a>
-                            <a href="#" class="ms-sm-5  fs_sm fw-semibold text-white footer_links_hover transition_03">Team</a>
-                            <a href="#" class="ms-sm-5  fs_sm fw-semibold text-white footer_links_hover transition_03">Contact</a>
+                            <a href="#"
+                                class="ms-sm-5 fs_sm fw-semibold text-white footer_links_hover transition_03">News</a>
+                            <a href="#"
+                                class="ms-sm-5  fs_sm fw-semibold text-white footer_links_hover transition_03">Team</a>
+                            <a href="#"
+                                class="ms-sm-5  fs_sm fw-semibold text-white footer_links_hover transition_03">Contact</a>
                         </div>
                         <div class="social_icons_margin d-md-flex d-none mt-sm-0 mt-4">
-                            <a class="pe-3" href="https://www.facebook.com/thebflawfirm" target="_blank" rel="noopener noreferrer">
+                            <a class="pe-3" href="https://www.facebook.com/thebflawfirm" target="_blank"
+                                rel="noopener noreferrer">
                                 <svg class="" width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
