--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
     <div class="bg-black border_one_side_top mt_150">
         <div class="milad_section mx-auto max_w_1440">
             <div class="d-flex flex-lg-row flex-column">
-                <div data-aos="fade-down" data-aos-duration="1000" data-aos-offset="-1700">
+                <div data-aos="fade-down" data-aos-duration="1000" >
                     <div class="milad_parent_margin me-auto">
                         <img src="./assets/images/icons/inverted_coma.svg" alt="inverted comma" class="inverted_comma">
                         <p
@@ -566,7 +566,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
                         </div>
                     </div>
                 </div>
-                <div data-aos="fade-down" data-aos-duration="1000" data-aos-offset="-1700">
+                <div data-aos="fade-down" data-aos-duration="1000" >
                     <div class="ms-auto">
                         <img src="./assets/images/milad/founder_man.png" alt="founder man image"
                             class="founder_man_img">
@@ -578,11 +578,11 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
     <!-- Cheryl Friedlander SECTION -->
     <div class="d-flex flex-lg-row flex-column-reverse max_w_1440">
         <div class="ms-sm-5 ps-sm-5 d-flex justify-content-end justify-content-lg-start" data-aos="fade-up"
-            data-aos-duration="1000" data-aos-offset="-1700">
+            data-aos-duration="1000" >
             <img src="./assets/images/milad/founder_women.png" alt="founder women image" class="founder_women_img">
         </div>
         <div class="Cheryl_main_parent mt-sm-5 pt-5 pe-xl-0 pe-4" data-aos="fade-up" data-aos-duration="1000"
-            data-aos-offset="-1700">
+            >
             <h3 class="Cheryl_para text-black letter_0-3 lh_100 fw-bold fs_2xl mb-0">
                 Cheryl has represented a
                 wide variety of clients in
@@ -660,7 +660,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
         <div class="anything_container mx-auto py-5 px-lg-0 px-4">
             <div class="row py-4 my-3 align-items-center">
                 <div class="col-md-6 ">
-                    <div data-aos="fade-down" data-aos-duration="1000" data-aos-offset="-1700">
+                    <div data-aos="fade-down" data-aos-duration="1000">
                         <h3 class="letter_0-3 text-white fw-bold lh_100 fs_2xl mb-0 anything_heading">
                             Anything you
                             need, we are here.
@@ -737,7 +737,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
     <!-- footer section  -->
     <footer class="bg-black">
         <div class="row position-relative max_w_1440" data-aos="fade-down" data-aos-duration="1000"
-            data-aos-offset="-1700">
+        >
             <div class="image_col p-sm-0 ">
                 <img src="./assets/images/icons/footer-img.svg" alt="footer image"
                     class="d-sm-block d-none pointer_event_none">
