--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
                 target="_blank"
                 rel="noopener noreferrer"
                 class="bio_button d-flex justify-content-center align-items-center fw-semibold fs_sm text-white transition_03 w-100 bg_bittersweet nowrap"
-                href="https://bf-firm-law-html.web.app/attorney-details.html"
+                href="/Bio.html"
                 >Bio</a
               >
               <div class="d-flex my-sm-5 my-4">
@@ -889,7 +889,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
           target="_blank"
           rel="noopener noreferrer"
           class="bio_button d-flex justify-content-center align-items-center fw-semibold fs_sm text-white transition_03 w-100 bg_bittersweet nowrap"
-          href="https://bf-firm-law-html.web.app/attorney-details.html"
+          href="/Bio.html"
           >Bio</a
         >
         <div class="d-flex my-sm-5 my-4">
