change header image

--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
     <!-- hero section  -->
     <main class="bg-black position-relative overflow-hidden">
       <div
-        class="px-3 mx-auto d-flex flex-md-row flex-column position-relative z-3"
+        class="px-3 mx-auto d-flex flex-md-row flex-column position-relative z-3 min-vh-100"
       >
         <div
-          class="side_nav ps-lg-5 pe-lg-0 px-md-4 md:py-5 py-3 flex-md-column flex-row d-flex"
+          class="side_nav ps-lg-5 pe-lg-0 px-md-4 py-md-5 py-3 flex-md-column flex-row d-flex"
         >
           <div class="d-md-none menu_icon d-flex pe-3">
             <img
