active nav links

--- a/news.html
+++ b/news.html
@@ -51,7 +51,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
 <body>
     <!-- hero section  -->
     <main class="bg-black position-relative overflow-hidden">
-        <div class="px-3 mx-auto d-flex flex-md-row flex-column position-relative z-3">
+        <div class="ps-sm-3 px-3 pe-sm-0  mx-auto d-flex flex-md-row flex-column position-relative z-3">
             <div
                 class="side_nav news_side_nav ps-lg-5 pe-lg-0 px-md-4 py-xl-3 py-lg-0 py-3 flex-md-column flex-row d-flex">
                 <div class="d-md-none menu_icon d-flex pe-3">
@@ -66,8 +66,8 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
                     <li>
                         <a href="#">Practice Areas</a>
                     </li>
-                    <li>
-                        <a href="#">News</a>
+                    <li id="news">
+                        <a href="#" class="news_link">News</a>
                     </li>
                     <li>
                         <a href="#">Team</a>
@@ -80,14 +80,14 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
             <div
                 class="news_hero_section text-white d-flex flex-column justify-content-center position-relative ps-md-3">
                 <div data-aos="fade-up" data-aos-duration="1000">
-                    <a class="color-peach d-flex align-items-center back_to_top_header" href="index.html">
+                    <a class="color-peach d-flex align-items-center back_to_top_header position-relative z-3" href="index.html">
                         <svg width="51" height="12" viewBox="0 0 51 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path class="transition_03s"
+                            <path class="transition_03"
                                 d="M8.87057 4.5H50.9999V7.5H8.87057V12L-5.34058e-05 6L8.87057 0V4.5Z" fill="#FE6A5B">
                             </path>
                         </svg>
                         <h5
-                            class="letter_03 text-uppercase transition_03 ms-2 mb-0 fs_sm fw-bold lh_100 color_bittersweet">
+                            class="letter_0_3 text-uppercase transition_03 ms-2 mb-0 fs_sm fw-bold lh_100 color_bittersweet">
                             Back to Home
                         </h5>
                     </a>
