nav links edited

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
                         <a href="#">Practice Areas</a>
                     </li>
                     <li>
-                        <a href="#">News</a>
+                        <a href="news.html">News</a>
                     </li>
                     <li>
                         <a href="#">Team</a>
