--- a/news.html
+++ b/news.html
@@ -58,10 +58,10 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
                     <img onclick="showNav()" class="mobile-nav-icon cursor_pointer" id="navToggleIcon"
                         src="/assets/images/icons/nav-toggle.svg" alt="toggle" />
                 </div>
-                <a href="#"><img class="" src="/assets/images/icons/logo.svg" alt="logo" /></a>
+                <a href="#"><img src="/assets/images/icons/logo.svg" alt="logo" /></a>
                 <ul id="navBar" class="d-flex mt-5 md:ms-2 flex-column ps-0 navbar_links">
                     <li>
-                        <a class="" href="#">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="#">Practice Areas</a>
