--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="overflow-x: hidden;">
 
 <head>
     <meta charset="UTF-8" />
@@ -46,9 +46,9 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
 
-<body>
+<body style="overflow-x: hidden;">
     <!-- hero section  -->
-    <main class="bg-black position-relative overflow-hidden"> 
+    <main class="bg-black position-relative overflow-hidden">
         <div class="px-3 mx-auto d-flex flex-md-row flex-column position-relative z-3">
             <div class="side_nav ps-lg-5 pe-lg-0 px-md-4 md:py-5 py-3 flex-md-column flex-row d-flex">
                 <div class="d-md-none menu_icon d-flex pe-3">
