accept incoming milad

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
     <!-- hero section  -->
     <main class="bg-black position-relative overflow-hidden">
       <div
-        class="px-3 mx-auto d-flex flex-md-row flex-column position-relative z-3"
+        class="px-3 mx-auto d-flex flex-md-row flex-column position-relative z-3 min-vh-100"
       >
         <div
           class="side_nav ps-lg-5 pe-lg-0 px-md-4 md:py-5 py-3 flex-md-column flex-row d-flex"
@@ -129,7 +129,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
           </ul>
         </div>
         <div
-          class="hero_section text-white d-flex flex-column justify-content-center position-relative ps-md-3"
+          class="hero_section text-white d-flex flex-column justify-content-center position-relative ps-md-3 mb-5"
         >
           <div data-aos="fade-up" data-aos-duration="1000">
             <h1 class="fs_sm fw-bold sm:pt-5 pt-4 text-uppercase mb-3">
@@ -415,8 +415,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
               <p
                 class="opacity_07 fs_md fw-semibold lh_100 mb-3 letter_0-3 text-white"
               >
-                Business, Commercial, and<br />
-                Contractual Disputes
+                Business, Commercial, and Contractual Disputes
               </p>
               <div class="gray_hr"></div>
               <p
@@ -434,8 +433,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
               <p
                 class="opacity_07 fs_md fw-semibold lh_100 mb-3 letter_0-3 text-white"
               >
-                Medical Malpractice <br />
-                and Personal Injury
+                Medical Malpractice and Personal Injury
               </p>
             </div>
           </div>
