--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
     <!-- hero section  -->
     <main class="bg-black position-relative overflow-hidden">
       <div
-        class="px-3 min-vh-100 mx-auto d-flex flex-md-row flex-column position-relative z-3"
+        class="px-3 min_vh_100 mx-auto d-flex flex-md-row flex-column position-relative z-3"
       >
         <div
           class="side_nav ps-lg-5 pe-lg-0 px-md-4 py-md-5 py-3 flex-md-column flex-row d-flex"
@@ -132,16 +132,18 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
           class="hero_section text-white d-flex flex-column justify-content-center position-relative ps-md-3"
         >
           <div data-aos="fade-up" data-aos-duration="1000">
-            <h1 class="fs_sm fw-bold sm:pt-5 pt-4 text-uppercase mb-3">
+            <h1
+              class="fs_sm fw-bold sm:pt-5 pt-4 ms-md-0 ms-sm-5 text-uppercase mb-3"
+            >
               REAL ESTATE. BUSINESS. CONSTRUCTION.
             </h1>
-            <h2 class="text-white fs_8xl fw-bolder">
+            <h2 class="text-white fs_8xl fw-bolder ms-md-0 ms-sm-5">
               WE
               <span class="d-block">ARE</span>
               <span class="advocate_text color_bittersweet">ADVOCATES</span>
             </h2>
           </div>
-          <a class="scroll_down position-absolute" href="#advise"
+          <a class="scroll_down position-absolute ms-3" href="#advise"
             ><img
               class="w-100"
               src="/assets/images/header/scroll-down.svg"
@@ -153,11 +155,6 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
         class="parthners position-absolute end-0 bottom-0"
         src="/assets/images/header/characters-home.png"
         alt="partners"
-      />
-      <img
-        class="bf_bg_logo position-absolute end-0 bottom-0"
-        src="/assets/images/header/header-bg.svg"
-        alt="bf-logo"
       />
     </main>
     <!-- advise section  -->
