changes in index file

--- a/index.html
+++ b/index.html
@@ -69,9 +69,12 @@
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
-    /> 
+    />
     <!-- slider link  -->
-    <link href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css"
+      rel="stylesheet"
+    />
     <!-- custum css links  -->
     <link rel="stylesheet" href="./assets/scss/milad.css" />
     <link rel="stylesheet" href="./assets/scss/root.css" />
@@ -884,7 +887,7 @@
           target="_blank"
           rel="noopener noreferrer"
           class="bio_button d-flex justify-content-center align-items-center fw-semibold fs_sm text-white transition_03 w-100 bg_bittersweet nowrap"
-          href="Bio.html"
+          href="Bio.html#Cheryl"
           >Bio</a
         >
         <div class="d-flex my-sm-5 my-4">
@@ -1045,7 +1048,10 @@
             </div>
           </div>
           <div class="col-md-6">
-            <form onsubmit="handleSubmit(event)" class="pt-md-0 pt-5 form_max_width">
+            <form
+              onsubmit="handleSubmit(event)"
+              class="pt-md-0 pt-5 form_max_width"
+            >
               <div class="w-100">
                 <input
                   type="text"
