--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <!-- hero section  -->
     <main class="bg-black position-relative overflow-hidden">
       <div
-        class="px-3 mx-auto d-flex flex-md-row flex-column position-relative z-3 min-vh-100 mb-5"
+        class="px-3 min_vh_100 mx-auto d-flex flex-md-row flex-column position-relative z-3 min-vh-100 mb-5"
       >
         <div
           class="side_nav ps-lg-5 pe-lg-0 px-md-4 md:py-5 py-3 flex-md-column flex-row d-flex"
@@ -116,7 +116,7 @@
               <a href="#">Practice Areas</a>
             </li>
             <li>
-              <a href="#">News</a>
+              <a href="/news.html">News</a>
             </li>
             <li>
               <a href="#">Team</a>
@@ -130,10 +130,12 @@
           class="hero_section text-white d-flex flex-column justify-content-center position-relative ps-md-3"
         >
           <div data-aos="fade-up" data-aos-duration="1000">
-            <h1 class="fs_sm fw-bold sm:pt-5 pt-4 text-uppercase mb-3">
+            <h1
+              class="fs_sm fw-bold sm:pt-5 pt-4 ms-md-0 ms-sm-5 text-uppercase mb-3"
+            >
               REAL ESTATE. BUSINESS. CONSTRUCTION.
             </h1>
-            <h2 class="text-white fs_8xl fw-bolder">
+            <h2 class="text-white fs_8xl fw-bolder ms-md-0 ms-sm-5">
               WE
               <span class="d-block">ARE</span>
               <span class="advocate_text color_bittersweet">ADVOCATES</span>
@@ -149,13 +151,8 @@
       </div>
       <img
         class="parthners position-absolute end-0 bottom-0"
-        src="/assets/images/header/characters-home.png"
+        src="/assets/images/header/characters-home.webp"
         alt="partners"
-      />
-      <img
-        class="bf_bg_logo position-absolute end-0 bottom-0"
-        src="/assets/images/header/header-bg.svg"
-        alt="bf-logo"
       />
     </main>
     <!-- advise section  -->
