--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css
       </div>
       <img
         class="parthners position-absolute end-0 bottom-0"
-        src="/assets/images/header/characters-home.png"
+        src="/assets/images/header/characters-home.webp"
         alt="partners"
       />
     </main>
