--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content=" https://bf-law-firm.vercel.app" />
+    <meta property="og:url" content="https://bf-law-firm-sigma.vercel.app" />
     <meta property="og:title" content="BF Firm Law" />
     <meta
       property="og:description"
@@ -47,12 +47,15 @@
     />
     <meta
       property="og:image"
-      content=" https://bf-law-firm.vercel.app/assets/seo_img.webp"
+      content="https://bf-law-firm-sigma.vercel.app/assets/seo_img.webp"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content=" https://bf-law-firm.vercel.app" />
+    <meta
+      property="twitter:url"
+      content="https://bf-law-firm-sigma.vercel.app"
+    />
     <meta property="twitter:title" content="BF Firm Law" />
     <meta
       property="twitter:description"
@@ -60,7 +63,7 @@
     />
     <meta
       property="twitter:image"
-      content=" https://bf-law-firm.vercel.app/assets/seo_img.webp"
+      content="https://bf-law-firm-sigma.vercel.app/assets/seo_img.webp"
     />
 
     <!-- Bootstrap link  -->
