--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <!-- hero section  -->
   <main class="bg-black position-relative overflow-hidden">
     <div class="px-3 min_vh_100 mx-auto d-flex flex-md-row flex-column position-relative z-3 min-vh-100 mb-5">
-      <div class="side_nav ps-lg-5 pe-lg-0 px-md-4 md:py-5 py-3 flex-md-column flex-row d-flex">
+      <div class="side_nav ps-lg-5 pe-lg-0 px-md-4 md:py-5 py-3 pt-lg-5 flex-md-column flex-row d-flex">
         <div class="d-md-none menu_icon d-flex pe-3">
           <img onclick="showNav()" class="mobile-nav-icon cursor_pointer" id="navToggleIcon"
             src="/assets/images/icons/nav-toggle.svg" alt="toggle" />
@@ -77,7 +77,7 @@
           <h1 class="fs_sm fw-bold sm:pt-5 pt-4 ms-md-0 ms-sm-5 text-uppercase mb-3">
             REAL ESTATE. BUSINESS. CONSTRUCTION.
           </h1>
-          <h2 class="text-white fs_8xl fw-bolder ms-md-0 ms-sm-5">
+          <h2 class="text-white fs_8xl fw-black fw_800 ms-md-0 ms-sm-5">
             WE
             <span class="d-block">ARE</span>
             <span class="advocate_text color_bittersweet">ADVOCATES</span>
