--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <div class="bg-black">
     <div
       class="real_estate mx-auto row px-lg-0 pe-sm-3 bg-white align-items-center align-items-md-end flex-wrap-reverse justify-content-center">
-      <div class="col-sm-6 px-sm-0 h-100 estate_building" data-aos="fade-down" data-aos-duration="1000">
+      <div class="col-sm-6 px-sm-0 h-100 estate_building me-auto" data-aos="fade-down" data-aos-duration="1000">
         <img class="w-100 object-fit-contain h-100" src="/assets/images/real-estate/deal-bg.svg" alt="real-estate" />
       </div>
       <div class="col-sm-6 col-12 pt-4 pb-4 px-md-3 px-sm-0 px-3" data-aos="fade-up" data-aos-duration="1000">
@@ -231,7 +231,7 @@
     <div class="row flex-sm-row flex-column litigation_main_parent max_w_1440">
       <div class="col-md-7 col-sm-9 col-12 p-0 p-md-5 litigation_section_margin" data-aos="fade-up"
         data-aos-duration="1000">
-        <div class="p-lg-5 py-md-5 py-lg-0 m-lg-4 p-2">
+        <div class="p-lg-5 py-md-5 py-lg-0 ms-lg-4 p-2">
           <div class="ms-sm-4">
             <div class="d-flex align-items-center">
               <div class="peach_hr"></div>
@@ -279,10 +279,10 @@
   <div class="mt-md-0 mt-5">
     <div class="position-relative overflow-hidden ms-sm-5 ps-md-5 ps-3 px-sm-0" data-aos="fade-up"
       data-aos-duration="1000">
-      <h2 class="fw_800 text-space fs_8xl text-space text-uppercase letter_0-5 pt-4">
+      <h2 class="fw_800 text-space fs_8xl text-space text-black text-uppercase letter_0-5 pt-3 mb-0">
         NEWS
       </h2>
-      <p class="text-black mb-0 pb-3 pt-2 text-space fw-semibold">
+      <p class="text-black mb-0 pt-2 text-space fw-semibold opacity_07 letter_0-3">
         Developments, trends, and opinions that move us at Boddoohi &
         Friedlander LLP, but also beyond.
       </p>
@@ -476,7 +476,7 @@
               <p class="attorney_text text-white fw-normal pt-sm-5 pt-4 mb-0 fs_lg lh_100">
                 Attorney Milad Boddoohi
               </p>
-              <p class="text-white mb-3 mt-0 letter_0-3 opacity_07 fs_sm fw-semibold">
+              <p class="text-white mb-3 mt-0 letter_0-3 opacity_07 fs_sm fw-semibold lh_100">
                 Partner & Co-Founder
               </p>
               <a type="sumbit" target="_blank" rel="noopener noreferrer"
@@ -625,8 +625,8 @@
   </div>
   <!-- anything section  -->
   <div class="bg-black anything_section position-relative">
-    <div class="anything_container mx-auto py-5 px-lg-0 px-4">
-      <div class="row py-4 my-3 align-items-center">
+    <div class="anything_container mx-auto py-5 custom_padding_anything_container">
+      <div class="row py-4 mb-4 mt-3 align-items-center">
         <div class="col-md-6">
           <div data-aos="fade-down" data-aos-duration="1000">
             <h3 class="letter_0-3 text-white fw-bold lh_100 fs_2xl mb-0 anything_heading">
@@ -670,7 +670,7 @@
             </a>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 mt-3">
           <form onsubmit="handleSubmit(event)" class="pt-md-0 pt-5 form_max_width">
             <div class="w-100">
               <input type="text" required="" class="contact_form" id="contact-form-name" placeholder="Your Name" />
@@ -698,7 +698,7 @@
   </div>
   <!-- footer section  -->
   <footer class="bg-black">
-    <div class="row position-relative max_w_1440" data-aos="fade-down" data-aos-duration="1000">
+    <div class="row position-relative max_w_1440 pt-3" data-aos="fade-down" data-aos-duration="1000">
       <div class="image_col p-sm-0">
         <img src="./assets/images/icons/footer-img.svg" alt="footer image"
           class="d-sm-block d-none pointer_event_none" />
